<resources>
    <string name="app_name">3_Laba</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first">1</string>
    <string name="sec">2</string>
    <string name="third">3</string>
    <string name="forth">4</string>
    <string name="enter">Введите число</string>
    <string name="go">Вперед</string>
    <string name="back">Назад</string>
    <string name="res">Результат:</string>
    <string name="enter_operation">Введите операцию</string>
</resources>